--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ generic-release-14.tar.gz
 /generic-release-15.tar.bz2
 /generic-release-15.tar.gz
 /generic-release-16.tar.gz
+/generic-release-17.tar.gz
