--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ generic-release-14.tar.gz
 /generic-release-15.tar.gz
 /generic-release-16.tar.gz
 /generic-release-17.tar.gz
+/generic-release-18.tar.gz
