--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ generic-release-14.tar.gz
 /generic-release-16.tar.gz
 /generic-release-17.tar.gz
 /generic-release-18.tar.gz
+/generic-release-19.tar.gz
