--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ generic-release-14.tar.gz
 /generic-release-17.tar.gz
 /generic-release-18.tar.gz
 /generic-release-19.tar.gz
+/generic-release-20.tar.gz
