Update mock configs

--- a/pignus-23-armv6hl.cfg
+++ b/pignus-23-armv6hl.cfg
@@ -29,4 +29,9 @@ syslog_device=
 name=pignus
 baseurl=https://pignus.computer/pub/linux/pignus/releases/$releasever/Everything/$basearch/os/
 failovermethod=priority
+
+[local]
+name=local
+enabled=0
+baseurl=http://koji.base48.cz/kojifiles/repos/f$releasever/latest/$basearch/
 """
