--- a/pignus-24-armv6hl.cfg
+++ b/pignus-24-armv6hl.cfg
@@ -5,6 +5,7 @@ config_opts['chroot_setup_cmd'] = 'install @build'
 config_opts['dist'] = 'fc24'  # only useful for --resultdir variable subst
 config_opts['extra_chroot_dirs'] = [ '/run/lock', ]
 config_opts['releasever'] = '24'
+config_opts['package_manager'] = 'dnf'
 
 config_opts['macros']['%_host'] = 'armv6hl-redhat-linux-gnu'
 config_opts['macros']['%_host_cpu'] = 'armv6hl'
@@ -29,4 +30,9 @@ syslog_device=
 name=pignus
 baseurl=https://pignus.computer/pub/linux/pignus/releases/$releasever/Everything/$basearch/os/
 failovermethod=priority
+
+[local]
+name=local
+enabled=0
+baseurl=http://koji.base48.cz/kojifiles/repos/f$releasever/latest/$basearch/
 """
