--- a/pigpkg.conf
+++ b/pigpkg.conf
@@ -1,19 +1,33 @@
 [fedpkg]
-lookaside = http://example.net/
-#http://pkgs.fedoraproject.org/repo/pkgs
-lookasidehash = md5
-#lookaside_cgi = https://pkgs.fedoraproject.org/repo/pkgs/upload.cgi
-lookaside_cgi = http://example.net/
-#https://pkgs.fedoraproject.org/repo/pkgs/upload.cgi
-gitbaseurl = git@github.com:pignus-project/%(module)s
+lookaside = https://src.fedoraproject.org/repo/pkgs
+lookasidehash = sha512
+lookaside_cgi = we_do_not_upload_our_sources
+gitbaseurl = ssh://git@github.com/pignus-project/%(module)s
 anongiturl = git+https://github.com/pignus-project/%(module)s
 #tracbaseurl = https://%(user)s:%(password)s@fedorahosted.org/rel-eng/login/xmlrpc
 branchre = f\d$|f\d\d$|el\d$|olpc\d$|master$
-kojiconfig = /etc/koji/pignus-config
-build_client = koji
+kojiconfig = /etc/koji.conf.d/pignus-config
+build_client = pignus
+# koji
 clone_config =
   bz.default-tracker bugs.pignus.computer
   bz.default-product Pignus
   bz.default-version rawhide
   bz.default-component %(module)s
   sendemail.to %(module)s-owner@pignus.computer
+  push.default simple
+distgit_namespaced = False
+#kerberos_realms = FEDORAPROJECT.ORG
+
+#[fedpkg.bodhi]
+# This is for the bodhi-client 1.x. that accepts --bodhi-dir option to switch
+# to different instances including the production and stage.
+#url = https://bodhi.fedoraproject.org/
+
+# This is for the bodhi-client 2.x, that do not require an option to switch to
+# different instance. Instead, --staging is available to switch to the stage
+# bodhi, and production is used without providing --staging.
+#staging = False
+
+#[fedpkg.pkgdb]
+#url = https://admin.fedoraproject.org/pkgdb/
